tests/pos/namespace-no-import/test.stk
namespace test

type A = Int

def double(n: A): A = n + n
