tests/neg/namespace-no-import/test.stk
namespace test

type A = Int

fun double(n: A): A = n + n
